<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.bts.atry.dummyservice.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_et_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:id="@+id/tv_main_activity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/input"
        android:ems="10"
        android:id="@+id/et_main_activity"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/start_intentservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_main_activity_intent_start_service"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/start_bound_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_main_activity_intent_start_service"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_main_activity_bound_start_service"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/next_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_main_activity_submit_et"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/et_main_activity"
        android:layout_toEndOf="@+id/et_main_activity" />

    <Button
        android:text="@string/start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_main_activity_start_service"
        android:layout_above="@+id/btn_main_activity_bound_start_service"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
